# cpp-battle-test-client

./: .gitignore  CMakeLists.txt  IdeaDescription.md  README.md  generate_project.bat
src/: Global.hpp  main.cpp
src/game/ai/: ActionChainAI.cpp  ActionChainAI.hpp  DamageHelper.cpp  DamageHelper.hpp
src/game/ai/actions/: MeleeAttackAction.cpp  MeleeAttackAction.hpp  MovementAction.cpp  MovementAction.hpp  RangeAttackAction.cpp  RangeAttackAction.hpp
src/game/aspects/: AIAspect.cpp  AIAspect.hpp  AgilityAspect.hpp  DeathStatusAspect.hpp  HealthAspect.hpp  MeleeAttackRadiusAspect.hpp  MovementTargetAspect.hpp  PositionAspect.hpp  RangeAttackRadiusAspect.hpp  StrengthAspect.hpp
src/game/base/: AspectStorage.hpp  AspectStorage.inl.hpp  GameWorld.cpp  GameWorld.hpp  Map.cpp  Map.hpp  RandomManager.cpp  RandomManager.hpp  Unit.cpp  Unit.hpp  UnitPool.cpp  UnitPool.hpp  Vec2.hpp
src/game/unit_creators/: HunterCreator.cpp  HunterCreator.hpp  SwordsmanCreator.cpp  SwordsmanCreator.hpp
